# template_rust_vertical_slice

./: .env.example  Cargo.toml  LICENSE.md  Makefile  README.md  diesel.toml  docker-compose.yml
messaging/: Cargo.toml
messaging/src/: main.rs  producer.rs  worker.rs
migrations/2024-02-27-165536_tasks/: down.sql  up.sql
migrations/2024-04-02-013431_create_accounts/: up.sql
src/: app_state.rs  db.rs  main.rs
src/accounts/: mod.rs
src/accounts/domain/: account.rs
src/accounts/features/: mod.rs
src/accounts/features/me/: mod.rs  query.rs  repository.rs  route.rs
src/accounts/features/refresh_token/: command.rs  repository.rs  route.rs
src/accounts/features/sign_in/: command.rs  model.rs  repository.rs  route.rs
src/accounts/features/sign_up/: command.rs  model.rs  repository.rs  route.rs
src/docs/: documentation.rs
src/shared/: app_state.rs  db.rs  exception_filter.rs  jwt_auth.rs  messaging.rs  mod.rs  schema.rs
src/tasks/: mod.rs
src/tasks/domain/: mod.rs  task.rs  task_tests.rs
src/tasks/features/: mod.rs
src/tasks/features/create_task/: command.rs  mod.rs  model.rs  repository.rs  route.rs
src/tasks/features/find_task_by_id/: mod.rs  model.rs  query.rs  repository.rs  route.rs
