workspace = { members = ["messaging"] }
[package]
name = "rust_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.1", features = ["postgres", "r2d2"] }
dotenv = "0.15"
thiserror = "1.0"
tower-http = { version = "0.5", features = ["full"] }
waiter_di = "1.6"
once_cell = "1.19"
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
lapin = "2.3"
futures-util = "0.3"